--- a/src/components/Slide/styles.css
+++ b/src/components/Slide/styles.css
@@ -1,4 +1,8 @@
 .container{
-  padding: 20px 0 20px 0;
   position: relative;
+  canvas{
+    width: 90%;
+    margin: 0 auto;
+    display: block;
+  }
 }
